# blang

./: .clangd  .gitignore  BUILD.md  CMakeCache.txt  CMakeLists.txt  Cargo.toml  Makefile  README.md  bootstrap.bat  bootstrap.sh  build.sh  config.mk  go.mod  main.go  package-lock.json  package.json
build-aux/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure~
build-aux/autom4te.cache/: output.0  output.1  output.2  traces.0  traces.2
include/: fifth.hh  lexer.h  main.h  notes.txt  types.h
old/: CMakeLists.txt
old/docs/: entry.md
old/src/: handler.c  lexer.c
old/tests/: fulltest.kid  hello.kid  math.kid
old_rs/: Cargo.toml
old_rs/src/: main.rs
old_rs/src/backend/: mod.rs  read.rs
old_rs/src/std_imp/: engrave.rs
src/: flags.cc  handler.c  help.cc  lexer.c  main.c  main.cc  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/.deps/: main.Po
src/backend/: mod.rs  open.rs  parser.rs  read.rs
src/engrave/: engrave.cc  engrave.hh
src/engrave/.deps/: engrave.Po
src/frontend/: cli.cc  frontend.hh
src/frontend/.deps/: cli.Tpo  file_input.Po  parser.Po
src/math/decrement/.deps/: decrement.Po
src/math/increment/: increment.cc  increment.hh
src/math/increment/.deps/: increment.Po
src/std_imp/: engrave.rs  mod.rs
std_lib/: main.kid
stdlib/: main.kid
tests/: fulltest.kid  hello.fs  math.kid
