AUTOMAKE_OPTIONS = foreign subdir-objects -Wall -Werror 
AM_CXXFLAGS = -fpermissive

bin_PROGRAMS = skid
skid_SOURCES = \
    ../src/main.cc \
    ../src/frontend/cli.cc \
    ../src/frontend/file_input.cc \
    ../src/frontend/parser.cc \
    ../src/math/decrement/decrement.cc \
    ../src/math/increment/increment.cc \
    ../src/engrave/engrave.cc