# build-aux/configure.ac

# Initialize Autoconf
AC_INIT([skid], [0.0.1], [apatel6ty@protonmail.com])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])

# Check for programs
AC_PROG_CXX
AC_PROG_CC

# Check for libraries
# Example: AC_CHECK_LIB([m], [main])

# Check for header files
# Example: AC_CHECK_HEADERS([stdio.h stdlib.h])

# Output files
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
